# proiect-cv4v

./: .gitignore  CMakeLists.txt  README.md  app.py  build.cmd  main.py
appl/: CMakeLists.txt  main.cpp
appl/lane_detector/: CMakeLists.txt  lane_detector.cpp  lane_detector.hpp
scripts/: build.py
